# optisortcreator

./: .flaskenv  README.md  pyproject.toml  run.py
migrations/: alembic.ini  env.py
migrations/versions/: 0ba8ef35a0b5_user_username.py  12b8b02663d6_nullables.py  18df4dbd19c1_remove_useless_features.py  3bff85c8be56_customer_access.py  59e00562c9e4_machine_data_documents.py  7453c1325904_init.py  97f64a10d617_init.py  d0886f658ce3_document.py
svsagro/: __init__.py  admin.py  database.py  mixins.py  models.py
svsagro/templates/myadmin3/: _macros.html  my_index.html  my_master.html
svsagro/templates/security/: _menu.html  _messages.html  login_user.html
svsagro/translations/de/LC_MESSAGES/: messages.po
svsagro/translations/en/LC_MESSAGES/: messages.po
svsagro/translations/es/LC_MESSAGES/: messages.po
svsagro/translations/nl/LC_MESSAGES/: messages.po
